# emulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  buildlinux.yml
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/defs/: CMakeLists.txt  object.ixx
src/core/event/: CMakeLists.txt  event.ixx  events.ixx  eventsystem.ixx  ieventsystem.ixx
src/core/event/include/: eventbus.h
src/core/logger/: CMakeLists.txt  consolelogger.ixx  logger.ixx
src/core/logger/include/: logger.h
src/core/logger/src/: logger.cpp
src/core/plugin/: CMakeLists.txt  iplugin.ixx  pluginloader.ixx  pluginmanager.ixx
src/core/plugin/include/: iplugin.h  ipluginloaderimpl.h  iuihost.h  plugincontext.h  pluginloader.h  pluginloaderlinux.h  pluginloaderwindows.h  pluginmanager.h  qmluihost.h
src/core/plugin/src/: pluginloader.cpp  pluginloaderlinux.cpp  pluginloaderwindows.cpp  pluginmanager.cpp
src/plugins/: CMakeLists.txt
src/plugins/mainwindow/: CMakeLists.txt  mainwindow.ixx
src/plugins/mainwindow/include/: mainwindowplugin.h  tabmodel.h
src/plugins/mainwindow/qml/: MainWindow.qml
src/plugins/mainwindow/src/: mainwindowplugin.cpp  tabmodel.cpp
src/plugins/pluginmanagerui/: CMakeLists.txt  pluginmanageruiplugin.cpp  pluginmanageruiplugin.h  pluginmodel.h
src/plugins/pluginmanagerui/qml/: PluginManager.qml
src/plugins/testplugin/: CMakeLists.txt  testplugin.ixx
